# kgpl3

./: CMakeLists.txt  ex.cpp
shader/: Vert2D.glsl
src/: CMakeLists.txt  ex.cpp
src/KGPL/: CMakeLists.txt  common.h  kgpl.h  test.cpp
src/KGPL/core/: bind.cpp  bind.hpp  core.hpp  global.cpp  global.hpp  init.cpp  init.hpp  next_frame.cpp  next_frame.hpp  quit.cpp  quit.hpp  scene.cpp  scene.hpp
src/KGPL/core/entity/: entity2D.cpp  entity2D.hpp
src/KGPL/render/: renderer.hpp  renderer_init.cpp  renderer_init.hpp  renderer_quit.cpp  renderer_render.cpp  renderer_render.hpp
src/KGPL/render/2D/: 2D.hpp  prepare.cpp  render.cpp  texture2D.cpp  texture2D.hpp
src/KGPL/render/shader/: compile_shader.cpp  compile_shader.hpp  shader_program.cpp  shader_program.hpp  shader_util.cpp  shader_util.hpp  shaders.hpp
src/KGPL/render/texture/: texture2D.hpp
src/KGPL/util/: files.h  log.h
